Table user {
  user_id integer [primary key, increment]
  name varchar
  email varchar [unique]
  created_at timestamp
}

Table card_condition {
  condition_id integer [primary key, increment]
  description varchar [unique]
}

Table price {
  card_id integer [primary key]
  condition_id integer [primary key]
  price_usd decimal [not null]
  date timestamp
}

Table collection {
  collection_id integer [primary key, increment]
  title varchar
  user_id integer [not null]
  exchange_rate decimal
  collection_price_usd decimal
  created_at timestamp
}

Table card_in_collection {
  card_collection_id integer [primary key, increment]
  collection_id integer [not null]
  card_id integer [not null]
  condition_id integer [not null]
  quantity integer
}

Table card {
  card_id integer [primary key, increment]
  name varchar
  language_id integer [not null]
  set_name_id integer [not null]
  set_number varchar
  image_id integer [not null]
  edition_id integer
  
  indexes {
    (name, language_id, set_name_id, set_number, image_id, edition_id) [unique, name: 'card_unique']
  }
}

Table language {
  language_id integer [primary key, increment]
  description varchar [unique]
}

Table edition {
  edition_id integer [primary key, increment]
  description varchar [unique]
}

Table set_name {
  set_name_id integer [primary key, increment]
  description varchar [unique]
}

Table image {
  image_url_id integer [primary key, increment]
  url varchar [unique]
}

Ref: collection.user_id > user.user_id
Ref: card.language_id > language.language_id
Ref: card.edition_id > edition.edition_id
Ref: card.set_name_id > set_name.set_name_id
Ref: card.image_id > image.image_url_id
Ref: card_in_collection.collection_id > collection.collection_id
Ref: price.card_id > card.card_id
Ref: price.condition_id > card_condition.condition_id
Ref: card_in_collection.(card_id, condition_id) > price.(card_id, condition_id)
